// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task lz:oapp:peers:get should show a standard lzReceive setting for all pathways 1`] = `
[
  [
    "┌───────────┬───────────────────────────────────────────────────────────┬───────────────────────────────────────────────────────────┐
│ from → to │ britney                                                   │ vengaboys                                                 │
├───────────┼───────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤
│ britney   │                                                           │ ┌────────────┬──────────────────────────────────────────┐ │
│           │                                                           │ │ msgType: 1 │ ┌─────────────────┬────────────────────┐ │ │
│           │                                                           │ │            │ │ lzReceiveOption │ ┌───────┬────────┐ │ │ │
│           │                                                           │ │            │ │                 │ │ gas   │ 200000 │ │ │ │
│           │                                                           │ │            │ │                 │ ├───────┼────────┤ │ │ │
│           │                                                           │ │            │ │                 │ │ value │ 0      │ │ │ │
│           │                                                           │ │            │ │                 │ └───────┴────────┘ │ │ │
│           │                                                           │ │            │ │                 │                    │ │ │
│           │                                                           │ │            │ └─────────────────┴────────────────────┘ │ │
│           │                                                           │ │            │                                          │ │
│           │                                                           │ └────────────┴──────────────────────────────────────────┘ │
│           │                                                           │                                                           │
├───────────┼───────────────────────────────────────────────────────────┼───────────────────────────────────────────────────────────┤
│ vengaboys │ ┌────────────┬──────────────────────────────────────────┐ │                                                           │
│           │ │ msgType: 1 │ ┌─────────────────┬────────────────────┐ │ │                                                           │
│           │ │            │ │ lzReceiveOption │ ┌───────┬────────┐ │ │ │                                                           │
│           │ │            │ │                 │ │ gas   │ 200000 │ │ │ │                                                           │
│           │ │            │ │                 │ ├───────┼────────┤ │ │ │                                                           │
│           │ │            │ │                 │ │ value │ 0      │ │ │ │                                                           │
│           │ │            │ │                 │ └───────┴────────┘ │ │ │                                                           │
│           │ │            │ │                 │                    │ │ │                                                           │
│           │ │            │ └─────────────────┴────────────────────┘ │ │                                                           │
│           │ │            │                                          │ │                                                           │
│           │ └────────────┴──────────────────────────────────────────┘ │                                                           │
│           │                                                           │                                                           │
└───────────┴───────────────────────────────────────────────────────────┴───────────────────────────────────────────────────────────┘
",
  ],
]
`;

exports[`task lz:oapp:peers:get should show all chains are connected after running wire with three networks 1`] = `
[
  [
    "┌───────────┬─────────┬───────────┬───────┐
│ from → to │ britney │ vengaboys │ tango │
├───────────┼─────────┼───────────┼───────┤
│ britney   │    ∅    │     ✓     │   ✓   │
├───────────┼─────────┼───────────┼───────┤
│ vengaboys │    ✓    │     ∅     │   ✓   │
├───────────┼─────────┼───────────┼───────┤
│ tango     │    ✓    │     ✓     │   ∅   │
└───────────┴─────────┴───────────┴───────┘
",
  ],
  [
    " ✓ - Connected",
  ],
  [
    " ⤫ - Not Connected",
  ],
  [
    " ∅ - Ignored",
  ],
]
`;

exports[`task lz:oapp:peers:get should show all chains are connected after running wire with two networks 1`] = `
[
  [
    "┌───────────┬─────────┬───────────┐
│ from → to │ britney │ vengaboys │
├───────────┼─────────┼───────────┤
│ britney   │    ∅    │     ✓     │
├───────────┼─────────┼───────────┤
│ vengaboys │    ✓    │     ∅     │
└───────────┴─────────┴───────────┘
",
  ],
  [
    " ✓ - Connected",
  ],
  [
    " ⤫ - Not Connected",
  ],
  [
    " ∅ - Ignored",
  ],
]
`;

exports[`task lz:oapp:peers:get should show all chains are connected expect one after running wire with three networks 1`] = `
[
  [
    "┌───────────┬─────────┬───────────┬───────┐
│ from → to │ britney │ vengaboys │ tango │
├───────────┼─────────┼───────────┼───────┤
│ britney   │    ∅    │     ✓     │   ✓   │
├───────────┼─────────┼───────────┼───────┤
│ vengaboys │    ✓    │     ∅     │   ✓   │
├───────────┼─────────┼───────────┼───────┤
│ tango     │    ∅    │     ✓     │   ∅   │
└───────────┴─────────┴───────────┴───────┘
",
  ],
  [
    " ✓ - Connected",
  ],
  [
    " ⤫ - Not Connected",
  ],
  [
    " ∅ - Ignored",
  ],
]
`;

exports[`task lz:oapp:peers:get should show all chains are not connected expect one after running wire with three networks 1`] = `
[
  [
    "┌───────────┬─────────┬───────────┬───────┐
│ from → to │ britney │ vengaboys │ tango │
├───────────┼─────────┼───────────┼───────┤
│ britney   │    ∅    │     ∅     │   ∅   │
├───────────┼─────────┼───────────┼───────┤
│ vengaboys │    ✓    │     ∅     │   ∅   │
├───────────┼─────────┼───────────┼───────┤
│ tango     │    ∅    │     ∅     │   ∅   │
└───────────┴─────────┴───────────┴───────┘
",
  ],
  [
    " ✓ - Connected",
  ],
  [
    " ⤫ - Not Connected",
  ],
  [
    " ∅ - Ignored",
  ],
]
`;

exports[`task lz:oapp:peers:get should show different combined enforced options for all pathways 1`] = `
[
  [
    "┌───────────┬─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ from → to │ britney                                                                                                                     │ vengaboys                                                                                                                   │ tango                                                                                                                               │
├───────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│ britney   │                                                                                                                             │ ┌────────────┬──────────────────────────────────────────┐                                                                   │ ┌────────────┬────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ │
│           │                                                                                                                             │ │ msgType: 1 │ ┌─────────────────┬────────────────────┐ │                                                                   │ │ msgType: 1 │ ┌────────────────────┬───────────────────────────────────────────────────────────────────────────────────────────┐ │ │
│           │                                                                                                                             │ │            │ │ lzReceiveOption │ ┌───────┬────────┐ │ │                                                                   │ │            │ │ lzReceiveOption    │ ┌───────┬────────┐                                                                        │ │ │
│           │                                                                                                                             │ │            │ │                 │ │ gas   │ 300000 │ │ │                                                                   │ │            │ │                    │ │ gas   │ 150000 │                                                                        │ │ │
│           │                                                                                                                             │ │            │ │                 │ ├───────┼────────┤ │ │                                                                   │ │            │ │                    │ ├───────┼────────┤                                                                        │ │ │
│           │                                                                                                                             │ │            │ │                 │ │ value │ 1      │ │ │                                                                   │ │            │ │                    │ │ value │ 0      │                                                                        │ │ │
│           │                                                                                                                             │ │            │ │                 │ └───────┴────────┘ │ │                                                                   │ │            │ │                    │ └───────┴────────┘                                                                        │ │ │
│           │                                                                                                                             │ │            │ │                 │                    │ │                                                                   │ │            │ │                    │                                                                                           │ │ │
│           │                                                                                                                             │ │            │ └─────────────────┴────────────────────┘ │                                                                   │ │            │ ├────────────────────┼───────────────────────────────────────────────────────────────────────────────────────────┤ │ │
│           │                                                                                                                             │ │            │                                          │                                                                   │ │            │ │ lzNativeDropOption │ ┌───┬───────────────────────────────────────────────────────────────────────────────────┐ │ │ │
│           │                                                                                                                             │ ├────────────┼──────────────────────────────────────────┤                                                                   │ │            │ │                    │ │ 0 │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │ │ │ │
│           │                                                                                                                             │ │ msgType: 2 │ ┌─────────────────┬────────────────────┐ │                                                                   │ │            │ │                    │ │   │ │ amount   │ 1                                                                  │ │ │ │ │
│           │                                                                                                                             │ │            │ │ lzComposeOption │ ┌───────┬────────┐ │ │                                                                   │ │            │ │                    │ │   │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │ │ │ │
│           │                                                                                                                             │ │            │ │                 │ │ index │ 0      │ │ │                                                                   │ │            │ │                    │ │   │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000002 │ │ │ │ │
│           │                                                                                                                             │ │            │ │                 │ ├───────┼────────┤ │ │                                                                   │ │            │ │                    │ │   │ └──────────┴────────────────────────────────────────────────────────────────────┘ │ │ │ │
│           │                                                                                                                             │ │            │ │                 │ │ gas   │ 200000 │ │ │                                                                   │ │            │ │                    │ │   │                                                                                   │ │ │ │
│           │                                                                                                                             │ │            │ │                 │ ├───────┼────────┤ │ │                                                                   │ │            │ │                    │ ├───┼───────────────────────────────────────────────────────────────────────────────────┤ │ │ │
│           │                                                                                                                             │ │            │ │                 │ │ value │ 1      │ │ │                                                                   │ │            │ │                    │ │ 1 │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │ │ │ │
│           │                                                                                                                             │ │            │ │                 │ └───────┴────────┘ │ │                                                                   │ │            │ │                    │ │   │ │ amount   │ 4                                                                  │ │ │ │ │
│           │                                                                                                                             │ │            │ │                 │                    │ │                                                                   │ │            │ │                    │ │   │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │ │ │ │
│           │                                                                                                                             │ │            │ └─────────────────┴────────────────────┘ │                                                                   │ │            │ │                    │ │   │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000003 │ │ │ │ │
│           │                                                                                                                             │ │            │                                          │                                                                   │ │            │ │                    │ │   │ └──────────┴────────────────────────────────────────────────────────────────────┘ │ │ │ │
│           │                                                                                                                             │ └────────────┴──────────────────────────────────────────┘                                                                   │ │            │ │                    │ │   │                                                                                   │ │ │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ │                    │ └───┴───────────────────────────────────────────────────────────────────────────────────┘ │ │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ │                    │                                                                                           │ │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ └────────────────────┴───────────────────────────────────────────────────────────────────────────────────────────┘ │ │
│           │                                                                                                                             │                                                                                                                             │ │            │                                                                                                                    │ │
│           │                                                                                                                             │                                                                                                                             │ ├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤ │
│           │                                                                                                                             │                                                                                                                             │ │ msgType: 2 │ ┌────────────────────┬───────────────────────────────────────────────────────────────────────────────────┐         │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ │ lzNativeDropOption │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │         │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ │                    │ │ amount   │ 2                                                                  │ │         │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ │                    │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │         │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ │                    │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000002 │ │         │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ │                    │ └──────────┴────────────────────────────────────────────────────────────────────┘ │         │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ │                    │                                                                                   │         │ │
│           │                                                                                                                             │                                                                                                                             │ │            │ └────────────────────┴───────────────────────────────────────────────────────────────────────────────────┘         │ │
│           │                                                                                                                             │                                                                                                                             │ │            │                                                                                                                    │ │
│           │                                                                                                                             │                                                                                                                             │ └────────────┴────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ │
│           │                                                                                                                             │                                                                                                                             │                                                                                                                                     │
├───────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│ vengaboys │ ┌────────────┬────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ │                                                                                                                             │ ┌────────────┬────────────────────────────────────────────────────────────────────────────────────────────────────────────┐         │
│           │ │ msgType: 1 │ ┌────────────────────┬───────────────────────────────────────────────────────────────────────────────────┐ │ │                                                                                                                             │ │ msgType: 1 │ ┌─────────────────┬────────────────────┐                                                                   │         │
│           │ │            │ │ lzReceiveOption    │ ┌───────┬────────┐                                                                │ │ │                                                                                                                             │ │            │ │ lzReceiveOption │ ┌───────┬────────┐ │                                                                   │         │
│           │ │            │ │                    │ │ gas   │ 200000 │                                                                │ │ │                                                                                                                             │ │            │ │                 │ │ gas   │ 200000 │ │                                                                   │         │
│           │ │            │ │                    │ ├───────┼────────┤                                                                │ │ │                                                                                                                             │ │            │ │                 │ ├───────┼────────┤ │                                                                   │         │
│           │ │            │ │                    │ │ value │ 1      │                                                                │ │ │                                                                                                                             │ │            │ │                 │ │ value │ 0      │ │                                                                   │         │
│           │ │            │ │                    │ └───────┴────────┘                                                                │ │ │                                                                                                                             │ │            │ │                 │ └───────┴────────┘ │                                                                   │         │
│           │ │            │ │                    │                                                                                   │ │ │                                                                                                                             │ │            │ │                 │                    │                                                                   │         │
│           │ │            │ ├────────────────────┼───────────────────────────────────────────────────────────────────────────────────┤ │ │                                                                                                                             │ │            │ └─────────────────┴────────────────────┘                                                                   │         │
│           │ │            │ │ lzNativeDropOption │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │ │ │                                                                                                                             │ │            │                                                                                                            │         │
│           │ │            │ │                    │ │ amount   │ 1                                                                  │ │ │ │                                                                                                                             │ ├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────────────┤         │
│           │ │            │ │                    │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │ │ │                                                                                                                             │ │ msgType: 2 │ ┌────────────────────┬───────────────────────────────────────────────────────────────────────────────────┐ │         │
│           │ │            │ │                    │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000001 │ │ │ │                                                                                                                             │ │            │ │ lzNativeDropOption │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │ │         │
│           │ │            │ │                    │ └──────────┴────────────────────────────────────────────────────────────────────┘ │ │ │                                                                                                                             │ │            │ │                    │ │ amount   │ 1                                                                  │ │ │         │
│           │ │            │ │                    │                                                                                   │ │ │                                                                                                                             │ │            │ │                    │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │ │         │
│           │ │            │ ├────────────────────┼───────────────────────────────────────────────────────────────────────────────────┤ │ │                                                                                                                             │ │            │ │                    │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000001 │ │ │         │
│           │ │            │ │ lzComposeOption    │ ┌───────┬────────┐                                                                │ │ │                                                                                                                             │ │            │ │                    │ └──────────┴────────────────────────────────────────────────────────────────────┘ │ │         │
│           │ │            │ │                    │ │ index │ 0      │                                                                │ │ │                                                                                                                             │ │            │ │                    │                                                                                   │ │         │
│           │ │            │ │                    │ ├───────┼────────┤                                                                │ │ │                                                                                                                             │ │            │ ├────────────────────┼───────────────────────────────────────────────────────────────────────────────────┤ │         │
│           │ │            │ │                    │ │ gas   │ 200000 │                                                                │ │ │                                                                                                                             │ │            │ │ lzComposeOption    │ ┌───────┬────────┐                                                                │ │         │
│           │ │            │ │                    │ ├───────┼────────┤                                                                │ │ │                                                                                                                             │ │            │ │                    │ │ index │ 0      │                                                                │ │         │
│           │ │            │ │                    │ │ value │ 1      │                                                                │ │ │                                                                                                                             │ │            │ │                    │ ├───────┼────────┤                                                                │ │         │
│           │ │            │ │                    │ └───────┴────────┘                                                                │ │ │                                                                                                                             │ │            │ │                    │ │ gas   │ 200500 │                                                                │ │         │
│           │ │            │ │                    │                                                                                   │ │ │                                                                                                                             │ │            │ │                    │ ├───────┼────────┤                                                                │ │         │
│           │ │            │ └────────────────────┴───────────────────────────────────────────────────────────────────────────────────┘ │ │                                                                                                                             │ │            │ │                    │ │ value │ 1      │                                                                │ │         │
│           │ │            │                                                                                                            │ │                                                                                                                             │ │            │ │                    │ └───────┴────────┘                                                                │ │         │
│           │ ├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────────────┤ │                                                                                                                             │ │            │ │                    │                                                                                   │ │         │
│           │ │ msgType: 2 │ ┌────────────────────┬───────────────────────────────────────────────────────────────────────────────────┐ │ │                                                                                                                             │ │            │ └────────────────────┴───────────────────────────────────────────────────────────────────────────────────┘ │         │
│           │ │            │ │ lzNativeDropOption │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │ │ │                                                                                                                             │ │            │                                                                                                            │         │
│           │ │            │ │                    │ │ amount   │ 2                                                                  │ │ │ │                                                                                                                             │ └────────────┴────────────────────────────────────────────────────────────────────────────────────────────────────────────┘         │
│           │ │            │ │                    │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │                    │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000002 │ │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │                    │ └──────────┴────────────────────────────────────────────────────────────────────┘ │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │                    │                                                                                   │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ └────────────────────┴───────────────────────────────────────────────────────────────────────────────────┘ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │                                                                                                            │ │                                                                                                                             │                                                                                                                                     │
│           │ ├────────────┼────────────────────────────────────────────────────────────────────────────────────────────────────────────┤ │                                                                                                                             │                                                                                                                                     │
│           │ │ msgType: 3 │ ┌────────────────────┬───────────────────────────────────────────────────────────────────────────────────┐ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │ lzNativeDropOption │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │                    │ │ amount   │ 2                                                                  │ │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │                    │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │                    │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000002 │ │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │                    │ └──────────┴────────────────────────────────────────────────────────────────────┘ │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ │                    │                                                                                   │ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │ └────────────────────┴───────────────────────────────────────────────────────────────────────────────────┘ │ │                                                                                                                             │                                                                                                                                     │
│           │ │            │                                                                                                            │ │                                                                                                                             │                                                                                                                                     │
│           │ └────────────┴────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ │                                                                                                                             │                                                                                                                                     │
│           │                                                                                                                             │                                                                                                                             │                                                                                                                                     │
├───────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤
│ tango     │ ┌────────────┬──────────────────────────────────────────┐                                                                   │ ┌────────────┬────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ │                                                                                                                                     │
│           │ │ msgType: 1 │ ┌─────────────────┬────────────────────┐ │                                                                   │ │ msgType: 1 │ ┌────────────────────┬───────────────────────────────────────────────────────────────────────────────────┐ │ │                                                                                                                                     │
│           │ │            │ │ lzReceiveOption │ ┌───────┬────────┐ │ │                                                                   │ │            │ │ lzReceiveOption    │ ┌───────┬────────┐                                                                │ │ │                                                                                                                                     │
│           │ │            │ │                 │ │ gas   │ 150000 │ │ │                                                                   │ │            │ │                    │ │ gas   │ 200001 │                                                                │ │ │                                                                                                                                     │
│           │ │            │ │                 │ ├───────┼────────┤ │ │                                                                   │ │            │ │                    │ ├───────┼────────┤                                                                │ │ │                                                                                                                                     │
│           │ │            │ │                 │ │ value │ 0      │ │ │                                                                   │ │            │ │                    │ │ value │ 1      │                                                                │ │ │                                                                                                                                     │
│           │ │            │ │                 │ └───────┴────────┘ │ │                                                                   │ │            │ │                    │ └───────┴────────┘                                                                │ │ │                                                                                                                                     │
│           │ │            │ │                 │                    │ │                                                                   │ │            │ │                    │                                                                                   │ │ │                                                                                                                                     │
│           │ │            │ └─────────────────┴────────────────────┘ │                                                                   │ │            │ ├────────────────────┼───────────────────────────────────────────────────────────────────────────────────┤ │ │                                                                                                                                     │
│           │ │            │                                          │                                                                   │ │            │ │ lzNativeDropOption │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │ │ │                                                                                                                                     │
│           │ └────────────┴──────────────────────────────────────────┘                                                                   │ │            │ │                    │ │ amount   │ 2                                                                  │ │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000002 │ │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ └──────────┴────────────────────────────────────────────────────────────────────┘ │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │                                                                                   │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ ├────────────────────┼───────────────────────────────────────────────────────────────────────────────────┤ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │ lzComposeOption    │ ┌───┬────────────────────┐                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │ 0 │ ┌───────┬────────┐ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ │ index │ 0      │ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ ├───────┼────────┤ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ │ gas   │ 200000 │ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ ├───────┼────────┤ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ │ value │ 1      │ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ └───────┴────────┘ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │                    │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ ├───┼────────────────────┤                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │ 1 │ ┌───────┬────────┐ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ │ index │ 1      │ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ ├───────┼────────┤ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ │ gas   │ 300000 │ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ ├───────┼────────┤ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ │ value │ 1      │ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │ └───────┴────────┘ │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ │   │                    │                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │ └───┴────────────────────┘                                                        │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ │                    │                                                                                   │ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │ └────────────────────┴───────────────────────────────────────────────────────────────────────────────────┘ │ │                                                                                                                                     │
│           │                                                                                                                             │ │            │                                                                                                            │ │                                                                                                                                     │
│           │                                                                                                                             │ └────────────┴────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ │                                                                                                                                     │
│           │                                                                                                                             │                                                                                                                             │                                                                                                                                     │
└───────────┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
",
  ],
]
`;

exports[`task lz:oapp:peers:get should show enforced options for one pathway 1`] = `
[
  [
    "┌───────────┬───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┬───────────┬───────┐
│ from → to │ britney                                                                                                                           │ vengaboys │ tango │
├───────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼───────────┼───────┤
│ britney   │                                                                                                                                   │           │       │
├───────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼───────────┼───────┤
│ vengaboys │ ┌────────────┬──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ │           │       │
│           │ │ msgType: 1 │ ┌──────────────────────────┬───────────────────────────────────────────────────────────────────────────────────┐ │ │           │       │
│           │ │            │ │ lzReceiveOption          │ ┌───────┬────────┐                                                                │ │ │           │       │
│           │ │            │ │                          │ │ gas   │ 200000 │                                                                │ │ │           │       │
│           │ │            │ │                          │ ├───────┼────────┤                                                                │ │ │           │       │
│           │ │            │ │                          │ │ value │ 0      │                                                                │ │ │           │       │
│           │ │            │ │                          │ └───────┴────────┘                                                                │ │ │           │       │
│           │ │            │ │                          │                                                                                   │ │ │           │       │
│           │ │            │ ├──────────────────────────┼───────────────────────────────────────────────────────────────────────────────────┤ │ │           │       │
│           │ │            │ │ lzNativeDropOption       │ ┌──────────┬────────────────────────────────────────────────────────────────────┐ │ │ │           │       │
│           │ │            │ │                          │ │ amount   │ 1                                                                  │ │ │ │           │       │
│           │ │            │ │                          │ ├──────────┼────────────────────────────────────────────────────────────────────┤ │ │ │           │       │
│           │ │            │ │                          │ │ receiver │ 0x0000000000000000000000000000000000000000000000000000000000000001 │ │ │ │           │       │
│           │ │            │ │                          │ └──────────┴────────────────────────────────────────────────────────────────────┘ │ │ │           │       │
│           │ │            │ │                          │                                                                                   │ │ │           │       │
│           │ │            │ ├──────────────────────────┼───────────────────────────────────────────────────────────────────────────────────┤ │ │           │       │
│           │ │            │ │ lzOrderedExecutionOption │ true                                                                              │ │ │           │       │
│           │ │            │ └──────────────────────────┴───────────────────────────────────────────────────────────────────────────────────┘ │ │           │       │
│           │ │            │                                                                                                                  │ │           │       │
│           │ └────────────┴──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ │           │       │
│           │                                                                                                                                   │           │       │
├───────────┼───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┼───────────┼───────┤
│ tango     │                                                                                                                                   │           │       │
└───────────┴───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┴───────────┴───────┘
",
  ],
]
`;

exports[`task lz:oapp:peers:get should show no chains are connected with two networks 1`] = `
[
  [
    "┌───────────┬─────────┬───────────┐
│ from → to │ britney │ vengaboys │
├───────────┼─────────┼───────────┤
│ britney   │    ∅    │     ⤫     │
├───────────┼─────────┼───────────┤
│ vengaboys │    ⤫    │     ∅     │
└───────────┴─────────┴───────────┘
",
  ],
  [
    " ✓ - Connected",
  ],
  [
    " ⤫ - Not Connected",
  ],
  [
    " ∅ - Ignored",
  ],
]
`;
